# associate-challenge

./: .gitignore  README.md  associate.py  part2.py  pyproject.toml  test.py
Employment Agreement/: CPIA.docx  Employment Agreement (James Stevenson).docx  Offer Letter.docx  Stock Option Agreement.docx
NVCA/: NVCA-IRA.docx  NVCA-SPA.docx  NVCA-VA.docx  acme-motors-term-sheet.docx
